<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:orientation="vertical"
  android:layout_height="match_parent">
  <LinearLayout
    android:background="@mipmap/windowbg"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
   <TextView
     android:id="@+id/tvContent"
     android:layout_marginTop="65dp"
     android:layout_marginLeft="30dp"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/exit_app_info"
     android:textColor="@color/black"
     android:textSize="18sp"/>
    <RelativeLayout
      android:layout_marginTop="20dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content">
      <LinearLayout
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
          android:id="@+id/layCancel"

          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@mipmap/btn_gray_window">
          <TextView
            android:layout_centerInParent="true"
            android:textSize="17.5sp"

            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/cancel"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
        <RelativeLayout
          android:id="@+id/layConfirm"
          android:layout_width="wrap_content"
          android:layout_marginLeft="19dp"
          android:layout_height="wrap_content"
          android:background="@mipmap/btn_red_window">
          <TextView
            android:layout_centerInParent="true"
            android:textSize="17.5sp"

            android:layout_width="wrap_content"
            android:textColor="@color/white"
            android:text="@string/confirm"
            android:layout_height="wrap_content"/>
        </RelativeLayout>
      </LinearLayout>

    </RelativeLayout>

  </LinearLayout>

 <ImageView
   android:layout_gravity="center_horizontal"
   android:layout_width="wrap_content"
   android:layout_height="wrap_content"
   android:src="@mipmap/window_icon"/>


</FrameLayout>