<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/drawer_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:context=".mvp.ui.activity.MainActivity"
  >
  <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <FrameLayout
        android:id="@+id/framelayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:orientation="vertical">

          <com.baidu.mapapi.map.MapView
            android:id="@+id/bmapView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />

          <ImageView
            android:id="@+id/ivBackToLocation"
            android:layout_width="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="70dp"
            android:layout_marginRight="13dp"
            android:layout_height="wrap_content"
            android:src="@mipmap/location"/>


          <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentBottom="true"
              android:layout_centerHorizontal="true"
              android:background="@mipmap/formbg"
              android:orientation="vertical">
              <LinearLayout
                android:id="@+id/layStartPosition"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="18dp"
                  android:src="@mipmap/start_dot"/>
                <TextView
                  android:id="@+id/tvStartPosition"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="13dp"
                  android:layout_marginRight="13dp"
                  android:hint="@string/where_start"
                  android:maxLines="2"
                  android:textColor="@color/black"
                  android:textColorHint="@color/text_hint"
                  android:textSize="16sp"
                  />

              </LinearLayout>


              <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="12dp"
                android:gravity="center_vertical"

                android:orientation="horizontal">
                <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="1dp"
                  android:src="@mipmap/go"/>
                <View
                  android:layout_width="match_parent"
                  android:layout_height="1dp"

                  android:layout_marginLeft="13dp"
                  android:background="@color/line_dark"/>

              </LinearLayout>
              <LinearLayout
                android:id="@+id/layEndPosition"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <ImageView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="18dp"
                  android:src="@mipmap/end_dot"/>
                <TextView
                  android:id="@+id/tvEndPosition"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginLeft="13dp"
                  android:hint="@string/where_go"
                  android:textColor="@color/black"
                  android:textColorHint="@color/text_hint"
                  android:textSize="16sp"
                  />

              </LinearLayout>


            </LinearLayout>
          </RelativeLayout>
        </FrameLayout>
        <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical">
          <android.support.v7.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="53dp"
            android:background="@mipmap/topbg"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            >

            <TextView
              android:id="@+id/tvTitleCity"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_gravity="center"
              android:textColor="#fff"
              android:textSize="18sp"/>

          </android.support.v7.widget.Toolbar>
          <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@mipmap/topbg2"/>

        </LinearLayout>


      </FrameLayout>

    </LinearLayout>


  </FrameLayout>


  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      >
      <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"

        android:orientation="vertical">


        <de.hdodenhof.circleimageview.CircleImageView
          android:id="@+id/ivUserImage"
          android:layout_width="76dp"
          android:layout_height="76dp"
          android:padding="2dp"
          android:src="@mipmap/user_photo"
          app:civ_border_color="@color/white"
          app:civ_border_width="1dp"/>


        <TextView
          android:id="@+id/tvName"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginTop="10dp"
          android:includeFontPadding="false"
          android:textColor="@color/white"
          android:textSize="16sp"/>

      </LinearLayout>

    </RelativeLayout>

    <android.support.v4.widget.NestedScrollView
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1">
    <LinearLayout
      android:id="@+id/layMain"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
      <LinearLayout
        android:id="@+id/layBasicInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50dp">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:background="@mipmap/user_info"
          />
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/basic_info"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/layTravelRecords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50dp">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:src="@mipmap/record"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/travel_records"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/layApproveCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:visibility="gone">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:src="@mipmap/approval_icon"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/approve_car"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/layCarManage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:visibility="gone">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:src="@mipmap/car_manage"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/car_manage"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/layPeopleCarManage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50dp"
        android:visibility="gone">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:src="@mipmap/set"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/people_car_manage"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>

      <LinearLayout
        android:id="@+id/layChartStatistial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50dp">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:src="@mipmap/bar"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/chart_statistical"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/laySystemMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50dp">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:src="@mipmap/help"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/system_messages"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/layShareRentCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:visibility="gone"
        android:focusable="true"
        android:gravity="center_vertical"
        android:minHeight="50dp">
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:src="@mipmap/share_rent_car"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/share_rent_car"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>
      <LinearLayout
        android:id="@+id/layCarTrace"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:visibility="gone"

        android:gravity="center_vertical"
        android:minHeight="50dp"
        >
        <ImageView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="48dp"
          android:src="@mipmap/car_trace"/>
        <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="11.5dp"
          android:text="@string/car_trace"
          android:textColor="@color/white"
          android:textSize="16sp"/>
      </LinearLayout>


    </LinearLayout>
    </android.support.v4.widget.NestedScrollView>


    <LinearLayout
      android:id="@+id/layExitApp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="25dp"
      android:layout_below="@id/layMain"
      android:background="?android:attr/selectableItemBackground"
      android:clickable="true"
      android:focusable="true"
      android:gravity="center_vertical"
      android:minHeight="50dp">
      <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:src="@mipmap/exit"/>
      <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11.5dp"
        android:text="@string/exit_app"
        android:textColor="@color/white"
        android:textSize="16sp"/>
    </LinearLayout>
  </LinearLayout>


</android.support.v4.widget.DrawerLayout>