<FrameLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="horizontal">
  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:gravity="center_vertical"
      android:orientation="vertical">
      <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="53dp"
        android:background="@mipmap/topbg"
        android:orientation="horizontal">
        <LinearLayout
          android:id="@+id/layCity"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_alignParentLeft="true"

          android:gravity="center_vertical"
          android:orientation="horizontal">
          <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="17sp"/>
          <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:src="@mipmap/down"/>
        </LinearLayout>

        <TextView
          android:id="@+id/tvSearch"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:gravity="center_vertical"
          android:layout_marginLeft="20dp"
          android:layout_centerVertical="true"
          android:layout_toRightOf="@id/layCity"
          android:text="@string/where_start"
          android:textColor="#cae7fd"
          android:textSize="17sp"/>
        <LinearLayout
          android:id="@+id/layCancel"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_alignParentRight="true"

          android:gravity="center_vertical"
          android:orientation="horizontal">
          <View
            android:layout_width="1dp"
            android:layout_height="20dp"
            android:background="#ceeeff"/>
          <TextView
            android:id="@+id/tvCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="17dp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="17sp"/>

        </LinearLayout>
      </RelativeLayout>
      <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    </LinearLayout>
  </LinearLayout>
  <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@mipmap/start_place_bg"
      android:layout_alignParentBottom="true"
      android:orientation="horizontal"
      android:gravity="center_vertical">
      <ImageView
        android:id="@+id/iv"
        android:layout_marginLeft="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/start"/>
      <TextView
        android:layout_marginLeft="10dp"
        android:maxLines="2"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:id="@+id/tvStartPosition"
        android:textSize="15sp"/>
      <TextView
        android:id="@+id/tvConfirm"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:layout_marginRight="11dp"
        android:layout_width="50dp"
        android:gravity="center"
        android:layout_height="50dp"
        android:text="@string/confirm"
        android:textColor="@color/black"
        android:textSize="@dimen/sp_16"
        />
    </LinearLayout>


  </RelativeLayout>


</FrameLayout>
